# RMVA

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  link.md  package.xml
launch/: shooter.launch.py  shooter_node.launch.py  vision.launch.py  vision_node.launch.py
results/: TEAM20_armor_results0.json  TEAM20_armor_results0.json.sha256  TEAM20_rect_results0.json  TEAM20_rect_results0.json.sha256  TEAM20_results1.json  TEAM20_results1.json.sha256  TEAM20_results2.json  TEAM20_results2.json.sha256  TEAM20_results3.json  TEAM20_results3.json.sha256  TEAM20_results4.json  TEAM20_results4.json.sha256  TEAM20_sphere_results0.json  TEAM20_sphere_results0.json.sha256
src/: shooter_node.cpp  vision_node.cpp
src/shooter/: CMakeLists.txt  calculate.cpp  shooter.h
src/vision/: CMakeLists.txt  armor.cpp  arror.cpp  bjjc.cpp  detector.cpp  detector_new.cpp  digit_detector.cpp  dynamic.cpp  main.cpp  ring.cpp  sphere.cpp  vision.h
